prql-compiler/tests/integration/snapshots/integration__cast.prql@cast.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nsort [-bytes]\nselect [\n    name,\n    bin = ((album_id | as REAL) * 99)\n]\ntake 20"
input_file: prql-compiler/tests/integration/queries/cast.prql
---
WITH table_1 AS (
  SELECT
    name,
    CAST(album_id AS REAL) * 99 AS bin,
    bytes
  FROM
    tracks
  ORDER BY
    bytes DESC
  LIMIT
    20
)
SELECT
  name,
  bin
FROM
  table_1 AS table_0

