prql-compiler/tests/integration/snapshots/integration__distinct.prql@distinct.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nselect [album_id, genre_id]\ngroup tracks.* (take 1)\nsort tracks.*\n"
input_file: prql-compiler/tests/integration/queries/distinct.prql
---
WITH table_1 AS (
  SELECT
    DISTINCT album_id,
    genre_id
  FROM
    tracks
)
SELECT
  album_id,
  genre_id
FROM
  table_1 AS table_0
ORDER BY
  album_id,
  genre_id

