prql-compiler/tests/integration/snapshots/integration__fmt@arithmetic.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "[\n    { x_int =  13, x_float =  13.0, k_int =  5, k_float =  5.0 },\n    { x_int = -13, x_float = -13.0, k_int =  5, k_float =  5.0 },\n    { x_int =  13, x_float =  13.0, k_int = -5, k_float = -5.0 },\n    { x_int = -13, x_float = -13.0, k_int = -5, k_float = -5.0 },\n]\nselect {\n    x_int / k_int,\n    x_int / k_float,\n    x_float / k_int,\n    x_float / k_float,\n    \n    q_ii = x_int // k_int,\n    q_if = x_int // k_float,\n    q_fi = x_float // k_int,\n    q_ff = x_float // k_float,\n\n    r_ii = x_int % k_int,\n    r_if = x_int % k_float,\n    r_fi = x_float % k_int,\n    r_ff = x_float % k_float,\n\n    (q_ii * k_int + r_ii | round 0),\n    (q_if * k_float + r_if | round 0),\n    (q_fi * k_int + r_fi | round 0),\n    (q_ff * k_float + r_ff | round 0),\n}\n"
input_file: prql-compiler/tests/integration/queries/arithmetic.prql
---

[
    {
        x_int = 13,
        x_float = 13,
        k_int = 5,
        k_float = 5,
    },
    {
        x_int = (-13),
        x_float = (-13),
        k_int = 5,
        k_float = 5,
    },
    {
        x_int = 13,
        x_float = 13,
        k_int = (-5),
        k_float = (-5),
    },
    {
        x_int = (-13),
        x_float = (-13),
        k_int = (-5),
        k_float = (-5),
    },
]
select {
    x_int / k_int,
    x_int / k_float,
    x_float / k_int,
    x_float / k_float,
    q_ii = x_int // k_int,
    q_if = x_int // k_float,
    q_fi = x_float // k_int,
    q_ff = x_float // k_float,
    r_ii = x_int % k_int,
    r_if = x_int % k_float,
    r_fi = x_float % k_int,
    r_ff = x_float % k_float,
    (q_ii * k_int + r_ii | round 0),
    (q_if * k_float + r_if | round 0),
    (q_fi * k_int + r_fi | round 0),
    (q_ff * k_float + r_ff | round 0),
}

