prql-compiler/tests/integration/snapshots/integration__fmt@cast.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nsort {-bytes}\nselect {\n    name,\n    bin = ((album_id | as REAL) * 99)\n}\ntake 20\n"
input_file: prql-compiler/tests/integration/queries/cast.prql
---
from tracks
sort {(-bytes)}
select {name, bin=(album_id | as `REAL`) * 99}
take 20

