prql-compiler/tests/integration/snapshots/integration__fmt@distinct_on.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# skip_duckdb (sort in group is ignored. I think this is a bug in duckdb)\n\nfrom tracks\nselect {genre_id, media_type_id, album_id}\ngroup {genre_id, media_type_id} (sort {-album_id} | take 1)\nsort {-genre_id, media_type_id}\n"
input_file: prql-compiler/tests/integration/queries/distinct_on.prql
---
from tracks
select {genre_id, media_type_id, album_id}
group {genre_id, media_type_id} (sort {-album_id} | take 1)
sort {-genre_id, media_type_id}

