prql-compiler/tests/integration/snapshots/integration__fmt@genre_counts.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "let genre_count = (\n    from genres\n    aggregate a = count\n)\n\nfrom genre_count\nfilter a > 0\nselect a = -a\n"
input_file: prql-compiler/tests/integration/queries/genre_counts.prql
---

let genre_count = (from genres | aggregate a = count)

from genre_count
filter a > 0
select a = (-a)

