prql-compiler/tests/integration/snapshots/integration__fmt@group_all.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from a=albums\ntake 10\njoin tracks (==album_id)\ngroup {a.album_id, a.title} (aggregate price = ((sum tracks.unit_price)))\nsort album_id\n"
input_file: prql-compiler/tests/integration/queries/group_all.prql
---
from a=albums
take 10
join tracks (==album_id)
group {a.album_id, a.title} (aggregate (price=sum tracks.unit_price))
sort album_id

