prql-compiler/tests/integration/snapshots/integration__fmt@group_sort.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nderive d = album_id + 1\ngroup d (\n    aggregate {\n        n1 = (track_id | sum),\n    }\n)\nsort d\ntake 10\nselect { d1 = d, n1 }\n"
input_file: prql-compiler/tests/integration/queries/group_sort.prql
---

from tracks
derive d = album_id + 1
group d (aggregate {n1 = (track_id | sum)})
sort d
take 10
select {d1 = d, n1}

