prql-compiler/tests/integration/snapshots/integration__fmt@invoice_totals.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# skip_mssql (error: The function 'LAG' may not have a window frame.)\nfrom i=invoices\njoin ii=invoice_items (==invoice_id)\nderive {\n    city = i.billing_city,\n    street = i.billing_address,\n}\ngroup {city, street} (\n    aggregate {\n        num_orders = s\"COUNT(DISTINCT {i.invoice_id})\",\n        num_tracks = sum ii.quantity,\n        total_price = sum (ii.unit_price * ii.quantity),\n    }\n)\ngroup {city} (\n    sort street\n    window expanding:true (\n        derive {running_total_num_tracks = sum num_tracks}\n    )\n)\nsort city\nderive {num_tracks_last_week = lag 7 num_tracks}\nselect {\n    city,\n    street,\n    num_orders,\n    num_tracks,\n    running_total_num_tracks,\n    num_tracks_last_week\n}\ntake 20\n"
input_file: prql-compiler/tests/integration/queries/invoice_totals.prql
---

from i = invoices
join ii = invoice_items (==invoice_id)
derive {
    city = i.billing_city,
    street = i.billing_address,
}
group {city, street} (aggregate {
    num_orders = s"COUNT(DISTINCT {i.invoice_id})",
    num_tracks = sum ii.quantity,
    total_price = sum ii.unit_price * ii.quantity,
})
group {city} (
    sort street
    window expanding:true (derive {running_total_num_tracks = sum num_tracks})
)
sort city
derive {num_tracks_last_week = lag 7 num_tracks}
select {
    city,
    street,
    num_orders,
    num_tracks,
    running_total_num_tracks,
    num_tracks_last_week,
}
take 20

