prql-compiler/tests/integration/snapshots/integration__fmt@pipelines.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# skip_mssql (https://github.com/PRQL/prql/issues/2448)\n# skip_mysql (regex not yet implemented)\n# skip_sqlite (regex not yet implemented)\n# booleans cannot be selected directly. instead CASE is needed (https://dba.stackexchange.com/a/2774)\nfrom tracks\n\nfilter (name ~= \"Love\")\nfilter ((milliseconds / 1000 / 60) | in 3..4)\nsort track_id\ntake 1..15\nselect {name, composer}\n"
input_file: prql-compiler/tests/integration/queries/pipelines.prql
---

from tracks
filter name ~= "Love"
filter ((milliseconds / 1000) / 60 | in 3..4)
sort track_id
take 1..15
select {name, composer}

